@@ -1,3 +1,8 @@
+2010-08-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/Collector.pm: collector_tokens database now depends
+	on DS configuration instance
+
 2010-08-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/CGI.pm: Added host-based authentication
